Update spring dependencies (#246)